infra/manifests/cli-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cli-proxy
  annotations:
    moonrepo.dev/skip-local: "true"
